-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.2, 6.7, 6.8
-
None
-
-
d570293bb (dev)
27" 2560x1440 125%
setHighDpiScaleFactorRoundingPolicy(Qt::HighDpiScaleFactorRoundingPolicy::Round);
Tray icon menu position is misplaced, see sample project.
When compiled against Qt 5.5.16 - works FINE.
Problem with QHighDpi::fromNativePixels ?
| For Gerrit Dashboard: QTBUG-123102 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 552611,3 | Warn on setHighDpiScaleFactorRoundingPolicy misuse | dev | qt/qtbase | Status: MERGED | +2 | 0 |